--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ body {
   line-height: 1.19;
   letter-spacing: 0.03em;
   text-decoration: none;
+  color: var(--main-text-color);
 }
 
 .logo span {
@@ -112,7 +113,15 @@ body {
   letter-spacing: 0.03em;
 }
 
+.about-list {
+  list-style: none;
+}
+
 /* team */
+
+.team-list {
+  list-style: none;
+}
 
 .team-name {
   font-weight: 500;
